Fix: Add layout-1-col class and apply landscape image alignment only there

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -679,8 +679,9 @@
         padding-right: 6px !important;
     }
 /* Fix for horizontal cover images in 1-column project page */
-.left-column-progetto.is-landscape > a > img {
+.layout-1-col .left-column-progetto.is-landscape > a > img {
     object-position: top left;
     width: 100%;
-}   min-width:100%;
+}
+
 }
